--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
 TODO:
 
-Create folder for Tranmitter controller
+Create folder for Transmitter controller
 Create folder for Reciever / Igniter controller
